# tiny-font-viewer

./: .gitignore  README.md  meson.build
contrib/: meson.build  tiny-font-viewer.spec.in
data/: io.github.cat-in-136.tiny-font-viewer.appdata.xml.in.in  io.github.cat-in-136.tiny-font-viewer.desktop.in.in  meson.build
src/: help-overlay.ui  main.c  meson.build  open-type-layout.h  sushi-font-loader.c  sushi-font-loader.h  sushi-font-widget.c  sushi-font-widget.h  tiny-font-viewer-app-menu.ui  tiny-font-viewer-app-window.c  tiny-font-viewer-app-window.h  tiny-font-viewer-app-window.ui  tiny-font-viewer-app.c  tiny-font-viewer-app.h  tiny-font-viewer.gresource.xml  tiny_font_viewer_app.c  tiny_font_viewer_app.h  tiny_font_viewer_app_window.c  tiny_font_viewer_app_window.h
